2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error when configured with --disable-bittorrent
	* test/DownloadHandlerFactoryTest.cc
	
2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Done make update-po
	* po/aria2c.pot
	* po/*.po
	* po/*.gmo

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.13.2rc.
	* src/configure.ac
	
2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made option name bold. Updated SYNOPSIS to make it more readable.
	* doc/aria2c.1.txt
	* doc/aria2c.1
	* doc/aria2c.1.html
	* src/version_usage.cc

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Refactored. Use std::string instead of size and char*.
	* Data.cc
	* Data.h
	* test/Data.cc

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added trimSelf(). Rewritten trim() to use trimSelf().
	* Util.cc
	* Util.h

2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	* src/ChunkChecksum.h (getChecksum): Return const reference.

2008-05-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error when configured with --disable-metalink.
	Also moved test/DownloadHandlerFactoryTest.cc to SRC in Makefile.am.
	* test/FeatureConfigTest.cc
	* test/DownloadHandlerFactoryTest.cc

2008-05-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error when configured with --without-gnutls
	--without-openssl
	* src/main.cc
	* test/DefaultBtProgressInfoFileTest.cc
	* test/SegmentManTest.cc

2008-05-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error with OpenSSL.
	* src/IteratableChunkChecksumValidator.cc
	* src/LibsslDHKeyExchange.h
	* src/MessageDigestHelper.cc

2008-05-19  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Revert the default value of --max-concurrent-downloads to 5.
	Revert the default value of --metalink-servers to 5.
	Man pages was also updated.
	* src/option_processing.cc