@@ -1,3 +1,10 @@
+2008-05-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Fixed compile error on Ubuntu.
+	* src/BtPieceMessage.cc
+	* src/MessageDigestHelper.cc
+	* src/Util.cc
+
 2008-05-21  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Fixed compile error when configured with --disable-bittorrent
